[package]
name = "fairychess-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
fairy-chess = { git = "https://github.com/ZayadNimrod/fairy-chess"}
wasm-bindgen = "0.2.*"
wee_alloc = { version = "0.4.5", optional = true }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"